crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__lists_tables__render_list_with_bold.snap
---
source: crates/ox_content_renderer/src/html/tests/lists_tables.rs
expression: html
---
<ul>
<li><p><strong>bold</strong> text</p>
</li>
</ul>
