crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__lists_tables__render_table_no_gfm.snap
---
source: crates/ox_content_renderer/src/html/tests/lists_tables.rs
expression: html
---
<p>| head |
| --- |
| body |</p>
